--- a/New_Labs/Lab1.Rmd
+++ b/New_Labs/Lab1.Rmd
@@ -4,9 +4,16 @@ author: "Thomas Kettig, based on work by Sonya Bird et al."
 date: "23 July 2023"
 output: html_document
 ---
+***
+#### __Goal of Lab 1:__
+##### The goal of this first lab is to explore some of the basic features of [PRAAT](www.praat.org), which we will be using for speech analysis throughout the term. You will:
 
-### Goal of Lab 1:
-##### The goal of this first lab is to explore some of the basic features of PRAAT (www.praat.org), which we will be using for speech analysis throughout the term. You will learn to make recordings, bring up visual displays of these recordings (waveforms and spectrograms), segment and label various components of these recordings, and export the visual displays into a word document. The skills you learn today will be useful for your lab work throughout the remainder of this course and beyond…
+##### 1. Learn to make recordings
+##### 2. Bring up visual displays of these recordings (waveforms and spectrograms)
+##### 3. Segment and label various components of these recordings
+##### 4. Export the visual displays into a word document. 
+
+##### The skills you learn today will be useful for your lab work throughout the remainder of this course and beyond…
 
 ***
 <br>
