--- a/New_Labs/Lab1.Rmd
+++ b/New_Labs/Lab1.Rmd
@@ -52,6 +52,9 @@ In the main menu of the Objects window (see Figure 1.2):
 </center>
 
 <br>
+Compare the waveform in these two cases. The one in the clipped recording has a square-like form, because the sound is “bursting out” of the maximum and minimum levels that can be plotted. In a good recording, the waveform will be touching the top and bottom of the plot only once or twice. The scale/zoom of the waveform will adjust such that it’s always showing exactly the 
+
+<br>
 4. Open the sound file in the Edit window:  
 
 * In the Objects window (see Figure 1.2), highlight the sound file you’ve just recorded.
