--- a/New_Labs/Lab3.Rmd
+++ b/New_Labs/Lab3.Rmd
@@ -136,8 +136,9 @@ __Q1:__ In this lab, you should take all of your measurements in approximately t
 | Method                 | [ ]  | [ ]  |  [ ] |  [ ] |  [ ] |  [ ] | [ ] | [ ]  |
 |:-----------------------|:----:|:----:|:----:|:----:|:----:|:----:|:---:|:----:|
 |Manual measurement      |      |      |      |      |      |      |     |      |
-
 <br>
+
+<center> <h4> __SECTION II. SPECTRAL MAKE-UP (FORMANT VALUES)__ </h4> </center>
 
 __Q2:__ Is pitch the same across all vowels? Do you notice any patterns with it? If so, what do you think the articulatory basis of these patterns might be?
 
