--- a/New_Labs/Lab2.Rmd
+++ b/New_Labs/Lab2.Rmd
@@ -134,6 +134,10 @@ __Q5:__ What differences (if any) do you observe in the preceding vowel duration
 
 __Q6:__ Summarizing what you’ve seen in this lab, what are the possible acoustic correlates of the phonemic voicing (voiced vs. voiceless) contrast across languages?
 
+<br>
+
+<center> <h4> __REFERENCES__ </h4> </center> 
+
 __Q7:__ Provide a reference and very brief summary of one academic paper that uses the methods covered in this lab.
 
 ***
