--- a/New_Labs/Lab3.Rmd
+++ b/New_Labs/Lab3.Rmd
@@ -47,7 +47,7 @@ The Fundamental frequency value is always displayed on the _right_ side of the w
 * Adjust the pitch range to see the pitch contor clearly:
   + If you have a very high voice, you may need to adjust the range __upwards__
   + If you have a very low voice, you may need to adjust the range __downwards__
-
+  
 <center>
 ![Figure 3.1: Getting a pitch value in Praat](./Images/Figure3_pitchvalue.png)
 </center>
@@ -59,7 +59,9 @@ If you are male, your pitch ought to be somewhere between 90 Hz and 150 Hz.
 >
 If you are female, it should be somewhere between 150 Hz and 250 Hz. 
 >
-If the pitch values that you are getting are outside of these ranges, Praat might be making a measurement error. You can confirm your pitch measurement by zooming in to a very small section of the waveform and manually measuring the duration of one glottal cycle. See Lab 4 for further details.
+If the pitch values that you are getting are outside of these ranges, Praat might be making a measurement error. You can confirm your pitch measurement by zooming in to a very small section of the waveform and manually measuring the duration of one glottal cycle. See Lab 4 for further details. 
+>
+Also, if you are using a Windows system, ensure that your 'analysis method' under Pitch settings is set to __raw autocorrelation__ to get the correct display for the pitch contours.
 
 <br>
 
@@ -68,6 +70,17 @@ If the pitch values that you are getting are outside of these ranges, Praat migh
 * Open a new spreadsheet in Excel: enter the IPA symbols for each vowel in column A, and your pitch (F0) measurements in column B (see Figure 3.2)
 * Select (highlight) columns A and B and create a chart: __Insert > 2-D Column > Clustered column__
 * Copy and paste both the table of measurements and the chart into a Word document for your lab report
+
+<br>
+
+> __TIP:__
+The column chart can be made in other word processors such as Google Sheets and the free browser version of Excel. However, there is some difficulty with making the upcoming cluster chart in these programs. It would be easier to use the desktop version of Excel and follow the instructions below. As York students, you can easily access this version for free via MyApps which can be found [here](https://www.yorku.ca/uit/faculty-staff-services/myapps/).
+>
+> * Log in to your Passport York in the MyApps portal - use only the first half of your email for the 'Username' portion.
+* Click on __your Profile > Download the client__
+* Install AppsAnywhere on your device
+* On the MyApps website, click 'View all apps'
+* Open __Excel__
 
 <center>
 
