--- a/New_Labs/Lab4.Rmd
+++ b/New_Labs/Lab4.Rmd
@@ -23,6 +23,13 @@ Generate a single sound file, "Lab4_SourceFilter.wav", containing the vowel [ɛ]
 
 1. Measure the fundamental frequency (pitch) in the middle of each [ɛ], using the three techniques described below, and fill out Table 4.1.
 
+> __TIP:__
+For the purposes of this lab, you will have to change the "longest analysis" setting as follows:
+>
+> * Go to __Analyses > Show analyses...__
+* Change <u> longest analyses (s) </u> to 12.0s
+>
+> Ensure that you change this setting back once the lab is completed! This can be done by clicking 'Standards' in the same __Show analyses__ window.
 <br>
 
 <u> Three ways to measure fundamental frequency: </u>
