--- a/New_Labs/Lab1.Rmd
+++ b/New_Labs/Lab1.Rmd
@@ -104,8 +104,8 @@ Two things are being displayed now in the Edit window: **the waveform** on the u
 >Along with these, Praat supports various [keyboard shortcuts](https://www.fon.hum.uva.nl/praat/manual/Keyboard_shortcuts.html) to help streamline this process. Some of the shortcuts that may be useful for the purposes of this lab are:
 >
 * __TAB__ - plays and pauses the recording
-* __Ctrl/Cmd + I__ - zoom in to a selection
-* __Ctrl/Cmd + O__ - zoom out of a selection
+* __Ctrl/Cmd + I__ - zoom in
+* __Ctrl/Cmd + O__ - zoom out
 * __Ctrl/Cmd + A__ - zoom out to full sound
 * __Ctrl/Cmd + 1__ - create a boundary on tier 1 (or two boundaries, if a portion is selected)
 * __Ctrl/Cmd + 2__ - create a boundary on tier 2 (the number can be changed to the number of the desired boundary) 
