--- a/New_Labs/Lab4.Rmd
+++ b/New_Labs/Lab4.Rmd
@@ -23,14 +23,14 @@ Generate a single sound file, "Lab4_SourceFilter.wav", containing the vowel [ɛ]
 
 1. Measure the fundamental frequency (pitch) in the middle of each [ɛ], using the three techniques described below, and fill out Table 4.1.
 
-> __TIP:__
-For the purposes of this lab, you will have to change the "longest analysis" setting as follows:
->
-> * Go to __Analyses > Show analyses...__
-* Change <u> longest analyses (s) </u> to 12.0s
->
-> Ensure that you change this setting back once the lab is completed! This can be done by clicking 'Standards' in the same __Show analyses__ window.
-<br>
+<!-- > __TIP:__ -->
+<!-- For the purposes of this lab, you will have to change the "longest analysis" setting as follows: -->
+<!-- > -->
+<!-- > * Go to __Analyses > Show analyses...__ -->
+<!-- * Change <u> longest analyses (s) </u> to 12.0s -->
+<!-- > -->
+<!-- > Ensure that you change this setting back once the lab is completed! This can be done by clicking 'Standards' in the same __Show analyses__ window. -->
+<!-- <br> -->
 
 <u> Three ways to measure fundamental frequency: </u>
 
@@ -103,7 +103,7 @@ NOTE: the narrow-band and wide-band spectrograms illustrate the time/frequency t
 
 <br>
 
-3.Looking at each [ɛ], notice the grey horizontal bands: these correspond to harmonics (see Figure 4.3). For each [ɛ] that you recorded, measure the frequency of the first 3 harmonics (H1-H3), plus of the 10th harmonic (H10). Use Table 4.2 to note down your measurements.
+3. Looking at each [ɛ], notice the grey horizontal bands: these correspond to harmonics (see Figure 4.3). For each [ɛ] that you recorded, measure the frequency of the first 3 harmonics (H1-H3), plus of the 10th harmonic (H10). Use Table 4.2 to note down your measurements.
 
 * Click on the centre (horizontally) of each harmonic, in the centre (vertically) of each [ɛ]
 * A red horizontal bar should appear, with the frequency value on the left side of the window, in red.
